# Cartesian-Impedance-Controller

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_8md.html  README_8md_source.html  annotated.html  base__tests_8cpp.html  base__tests_8cpp__incl.map  base__tests_8cpp__incl.md5  base__tests_8cpp_source.html  cartesian__impedance__controller_8cpp.html  cartesian__impedance__controller_8cpp__incl.map  cartesian__impedance__controller_8cpp__incl.md5  cartesian__impedance__controller_8cpp_source.html  cartesian__impedance__controller_8h.html  cartesian__impedance__controller_8h__dep__incl.map  cartesian__impedance__controller_8h__dep__incl.md5  cartesian__impedance__controller_8h__incl.map  cartesian__impedance__controller_8h__incl.md5  cartesian__impedance__controller_8h_source.html  cartesian__impedance__controller__ros_8cpp.html  cartesian__impedance__controller__ros_8cpp__incl.map  cartesian__impedance__controller__ros_8cpp__incl.md5  cartesian__impedance__controller__ros_8cpp_source.html  cartesian__impedance__controller__ros_8h.html  cartesian__impedance__controller__ros_8h__dep__incl.map  cartesian__impedance__controller__ros_8h__dep__incl.md5  cartesian__impedance__controller__ros_8h__incl.map  cartesian__impedance__controller__ros_8h__incl.md5  cartesian__impedance__controller__ros_8h_source.html  cartesian_impedance_controller_plugin.xml  cartesian_impedance_moveit_plugin.xml  classcartesian__impedance__controller_1_1CartesianImpedanceController-members.html  classcartesian__impedance__controller_1_1CartesianImpedanceController.html  classcartesian__impedance__controller_1_1CartesianImpedanceControllerRos-members.html  classcartesian__impedance__controller_1_1CartesianImpedanceControllerRos.html  (+70 more)
bh_robot/: Readme.md
bh_robot/bh_control/: CMakeLists.txt  controller_plugins.xml  package.xml  setup.py
bh_robot/bh_control/config/: bh_control.yaml  bh_joint_names.yaml  bh_service.yaml  hh_control.yaml  hh_joint_names.yaml  hh_service.yaml
bh_robot/bh_control/include/: cartesian_impedance_controller.h  cartesian_impedance_controller_base.h
bh_robot/bh_control/launch/: bh_control.launch  controllers.launch  fri_drivers.launch  hh_control.launch  hw.launch
bh_robot/bh_control/src/: cartesian_impedance_controller.cpp  cartesian_impedance_controller_base.cpp
bh_robot/bh_control/test/: send_trajectory
bh_robot/bh_description/: CMakeLists.txt  package.xml
bh_robot/bh_description/calibration/: robot_cal.xacro
bh_robot/bh_description/config/: jsp_config_dual_arm.yaml  jsp_config_piston_gripper.yaml  jsp_config_wsg_gripper.yaml
bh_robot/bh_description/launch/: dual_arm_description.launch  joint_state_publisher.launch  single_arm_description.launch
bh_robot/bh_description/meshes/iiwa_mount/: iiwa_torso.stl
bh_robot/bh_description/meshes/peg_and_hole/: block_with_hole_150.stl  peg_3mm.stl
bh_robot/bh_description/meshes/piston_gripper/: chuck.stl  claw.stl
bh_robot/bh_description/meshes/primesense/: primesense_collision.stl  primesense_visual.stl
bh_robot/bh_description/meshes/schunk_wsg50/: finger.dae  finger.stl  schunk_wsg50_main.dae  schunk_wsg50_main.stl
bh_robot/bh_description/robots/: dual_arm.urdf.xacro  iiwa_piston_gripper.urdf.xacro  iiwa_wsg_gripper.urdf.xacro
bh_robot/bh_description/urdf/: cube_base.urdf.xacro  iiwa_table.urdf.xacro
bh_robot/bh_description/urdf/arms/: iiwa.gazebo.xacro  iiwa7_gazebo_fix.xacro
bh_robot/bh_description/urdf/end_effectors/: piston_gripper.urdf.xacro  schunk_wsg50.urdf.xacro
bh_robot/bh_description/urdf/iiwa_mount/: iiwa_torso.urdf.xacro
bh_robot/bh_description/urdf/primesense/: primesense_camera.gazebo.xacro  primesense_camera.urdf.xacro
bh_robot/bh_gazebo/: CMakeLists.txt  Readme.md  package.xml
bh_robot/bh_gazebo/include/bh_gazebo/: floating_joint_plugin.h
bh_robot/bh_gazebo/launch/: gazebo.launch
bh_robot/bh_gazebo/src/bh_gazebo/: floating_joint_plugin.cpp
bh_robot/bh_gazebo/worlds/: aruco.world  beers.world  box.world  empty.world  motor.world  vision.world
bh_robot/bh_robot/: CMakeLists.txt  package.xml
bh_robot/bh_robot/config/: bh_config.rviz  dual_arm_config.rviz
bh_robot/bh_robot/launch/: bringup.launch  core.launch
bh_robot/bh_robot/scripts/: aau_dual_arm_init_joint_positions.bash
cfg/: .wrench_config.cfg.swp  damping.cfg  damping_config.cfg  impedance_config.cfg  log_config.cfg  stiffness.cfg  wrench.cfg  wrench_config.cfg
config/: example_controller.yaml  franka_impedance_controller.yaml  franka_impedance_controller_real.yaml  franka_impedance_controller_test_4.yaml  panda.yaml
include/: cartesian_impedance_controller.h  cartesian_impedance_controller_base.h
launch/: cartesian_impedance_controller.launch  cartesian_impedance_controller_full.launch  cartesian_impedance_controller_test.launch  cartesian_impedance_controller_test_2.launch  cartesian_impedance_controller_test_3.launch  cartesian_impedance_controller_test_4.launch  control_test_4.launch  examples.launch  panda_real.launch  panda_real_t3.launch  panda_sim.launch  panda_total.launch
msg/: CartesianImpedanceControlMode.msg  CartesianWrench.msg  ControllerConfig.html  ControllerConfig.msg  ControllerState.html  ControllerState.msg  FourDimensionalQuantity.msg  JointsQuantity.msg  RobotImpedanceState.msg
python_scripts/: check_pose.py  motion1.py
res/: Abstract.txt  codemeta.json  paper.bib  paper.md
scripts/: .home_position.sh.swp  MOTION_record.sh  apply_wrench.sh  change_damping.sh  change_goal.sh  change_nullspace_config.sh  change_stiffness.sh  check_pose.py  compile_paper.sh  configuration1.sh  exp2_gradual_nullspace.sh  home_position.sh  home_position_sliding.sh  install_dependencies.sh  log_data.sh  measure_update_time.sh  motion1.sh  motion10.sh  motion11.sh  motion12.sh  motion1_record.sh  motion2.sh  motion2_record.sh  motion3.sh  motion3_record.sh  motion4.sh  motion4_record.sh  motion5.sh  motion5_record.sh  motion6.sh  motion7.sh  motion8.sh  motion9.sh  peg_in_hole.sh  read_data.sh  readme_scripts.md  singularity_config1.sh  sliding_mot.sh  (+2 more)
(+67 files in other folders)
