<?xml version="1.0"?>
<package format="3">
  <name>cartesian_impedance_controller</name>
  <version>0.1.0</version>
  <description>
    A Cartesian Impedance controller implementation
  </description>
  <maintainer email="matthias.mayr@cs.lth.se">Matthias Mayr</maintainer>
  <license>BSD-3-Clause</license>
  
  <author>Matthias Mayr</author>
  <author>Oussama Chouman</author>
  <author>Julian Salt Ducaju</author>
  <author email="cenk.cetin@liverpool.ac.uk">Cenk Cetin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>action_msgs</depend>
  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>generate_parameter_library</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>rosidl_typesupport_cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>joint_state_broadcaster</test_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>joint_state_broadcaster</test_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/cartesian_impedance_controller_plugin.xml"/>
  </export>
</package>
